--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "devDependencies": {
     "@types/three": "^0.163.0",
+    "glslify-loader": "^2.0.0",
+    "raw-loader": "^4.0.2",
     "typescript": "^5.4.5",
-    "vite": "^5.2.9"
+    "vite": "^5.2.9",
+    "vite-plugin-glsl": "^1.3.0"
   },
   "dependencies": {
     "gl-matrix": "^3.4.3",
